Final Muhammad Ihsan

--- a/index.html
+++ b/index.html
@@ -2,9 +2,76 @@
 <html lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devie-width, initial-scale=1.0">
-    <tittle></tittle> Belajar Pemograman Website</tittle>
+    <tittle></tittle>Portofolio ihsan</tittle>
+    <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 </head>
 <body>
-    <h1>Pengenalan Lingkungan lab dan GIT</h1>
+    <header class="main-header">
+    <h1>BELAJAR HTML CSS JAVA</h1>
+    <nav>
+    </ul>
+    <il><a href="#content">Home</a></il>
+    <il><a href="skills">Skill</a></il>
+</ul>
+    </nav>
+</header>
+
+<main>
+    <section id="content">
+        <h2>Tentang saya</h2>
+        <div class="about-section">
+            <div class="about-text">
+                <h4>Hello word,</h4>
+                <h3 id="demo"></h3>
+                <p>Sekarang saya belajar HTML CSS dan JavaScript</p>
+                <p>
+                    Perkenalkan nama saya Muhammad Ihsan Afiyanto, Biasa dipanggil ihsan. Saya mahasiswa Universitas Nahdlatul Ulama Yogyakarta.
+                    Prodi Infotmatika, Saya adalah seorang yang suka dalam bidang editing, maupun editing video dan foto. hobby saya yaitu volly ball,
+                    mobile gamers,dan nyanyi. sekian terimakasih
+                </p>
+                <button onclick="ShowMesssage()">Clic Here</button>
+            </div>
+
+            <div class="about-image">
+            <img src="Gambar WhatsApp 2025-10-07 pukul 20.44.13_ed3a4ae6.jpg" alt="Gambar" class="hero-img"/>
+        </div>
+        </div>
+    </section>
+
+    <section id="skills">
+        <h2>skills</h2>
+        <div class="skills">
+            <div class="skill">
+                <i class="fab fa-html5"></i>
+                <h3>HTML5</h3>
+                <p>Struktur Website</p>
+            </div>
+            <div class="skill">
+                <i class="fab fa-css3-alt"></i>
+                <h3>CSS3</h3>
+                <p>Sytling & Layout</p>
+            </div>
+            <div class="skill">
+                <i class="fab fa-js-square"></i>
+                <h3>JavaScript</h3>
+                <p>interaktivitas</p>
+            </div>
+            <div class="skill">
+                <i class="fab fa-react"></i>
+                <h3>React</h3>
+                <p>UI FrameWork</p>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer>
+    <p>&copy; 2025 Praktikum Pemograman Web</p>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
