Final Muhammad Ihsan

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <h1>BELAJAR HTML CSS JAVA</h1>
     <nav>
     </ul>
-    <il><a href="#content">Home</a></il>
+    <il><a href="content">Home</a></il>
     <il><a href="skills">Skill</a></il>
+    <il><a href="contact">Contact</a></il>
 </ul>
     </nav>
 </header>
@@ -29,17 +30,33 @@
                 <h3 id="demo"></h3>
                 <p>Sekarang saya belajar HTML CSS dan JavaScript</p>
                 <p>
-                    Perkenalkan nama saya Muhammad Ihsan Afiyanto, Biasa dipanggil ihsan. Saya mahasiswa Universitas Nahdlatul Ulama Yogyakarta.
-                    Prodi Infotmatika, Saya adalah seorang yang suka dalam bidang editing, maupun editing video dan foto. hobby saya yaitu volly ball,
+                    Perkenalkan nama saya Muhammad Ihsan Afiyanto, Biasa dipanggil ihsan.
+                    Saya mahasiswa Universitas Nahdlatul Ulama Yogyakarta.
+                    Prodi Infotmatika, Saya adalah seorang yang suka dalam bidang editing,
+                    maupun editing video dan foto. hobby saya yaitu volly ball,
                     mobile gamers,dan nyanyi. sekian terimakasih
                 </p>
                 <button onclick="ShowMesssage()">Clic Here</button>
             </div>
 
             <div class="about-image">
-            <img src="Gambar WhatsApp 2025-10-07 pukul 20.44.13_ed3a4ae6.jpg" alt="Gambar" class="hero-img"/>
+            <img src="Gambar WhatsApp 2025-10-07 pukul 20.44.13_ed3a4ae6.jpg" width="200" alt="Gambar" class="hero-img"/>
         </div>
         </div>
+    </section>
+
+    <section>
+        <from>
+            <ul>
+                <label for="Nama">Nick Name:</label>
+                <input type="text" id="Nama" name="Muhammad Ihsan">
+            </ul>
+            <ul>
+                <label for="Nama">Email:</label>
+                <input type="text">
+            </ul>
+        </from>
+        
     </section>
 
     <section id="skills">
@@ -75,3 +92,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
